--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
             <div class="destination" id="saudi">
                 <h2>saudi</h2>
             </div>
+             <div class="destination" id="paris">
+                <h2>paris</h2>
+            </div>
         </div>
     </div>
 
